; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_pack.c_git_packfile_unpack_header.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_pack.c_git_packfile_unpack_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_EBUFS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"header length is zero\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_packfile_unpack_header(i64* %0, i32* %1, i32* %2, i32** %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store i64* %0, i64** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32** %3, i32*** %10, align 8
  store i64* %4, i64** %11, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = load i32**, i32*** %10, align 8
  %18 = load i64*, i64** %11, align 8
  %19 = load i64, i64* %18, align 8
  %20 = call i8* @git_mwindow_open(i32* %16, i32** %17, i64 %19, i32 20, i32* %13)
  store i8* %20, i8** %12, align 8
  %21 = load i8*, i8** %12, align 8
  %22 = icmp eq i8* %21, null
  br i1 %22, label %23, label %25

23:                                               ; preds = %5
  %24 = load i32, i32* @GIT_EBUFS, align 4
  store i32 %24, i32* %6, align 4
  br label %49

25:                                               ; preds = %5
  %26 = load i64*, i64** %7, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = load i8*, i8** %12, align 8
  %29 = load i32, i32* %13, align 4
  %30 = call i32 @packfile_unpack_header1(i64* %14, i64* %26, i32* %27, i8* %28, i32 %29)
  store i32 %30, i32* %15, align 4
  %31 = load i32**, i32*** %10, align 8
  %32 = call i32 @git_mwindow_close(i32** %31)
  %33 = load i32, i32* %15, align 4
  %34 = load i32, i32* @GIT_EBUFS, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %25
  %37 = load i32, i32* %15, align 4
  store i32 %37, i32* %6, align 4
  br label %49

38:                                               ; preds = %25
  %39 = load i32, i32* %15, align 4
  %40 = icmp slt i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %38
  %42 = call i32 @packfile_error(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  store i32 %42, i32* %6, align 4
  br label %49

43:                                               ; preds = %38
  br label %44

44:                                               ; preds = %43
  %45 = load i64, i64* %14, align 8
  %46 = load i64*, i64** %11, align 8
  %47 = load i64, i64* %46, align 8
  %48 = add i64 %47, %45
  store i64 %48, i64* %46, align 8
  store i32 0, i32* %6, align 4
  br label %49

49:                                               ; preds = %44, %41, %36, %23
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local i8* @git_mwindow_open(i32*, i32**, i64, i32, i32*) #1

declare dso_local i32 @packfile_unpack_header1(i64*, i64*, i32*, i8*, i32) #1

declare dso_local i32 @git_mwindow_close(i32**) #1

declare dso_local i32 @packfile_error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
